<resources>
    <string name="app_name">Syncthing Lite</string>
    <string name="folder_list_empty_message">No folder available</string>
    <string name="clear_local_cache_index_label">Clear local cache/index</string>
    <string name="devices_list_view_empty_message">No devices available</string>
    <string name="invalid_device_id">Error: Invalid device ID</string>
    <string name="dialog_downloading_file">Downloading file %1$s</string>
    <string name="toast_file_download_failed">Failed to download file</string>
    <string name="toast_open_file_failed">No compatible app found</string>
    <string name="toast_file_upload_failed">File upload failed</string>
    <string name="toast_upload_complete">File upload complete</string>
    <string name="dialog_uploading_file">Uploading file %1$s</string>
    <string name="clear_cache_and_index_title">Clear local cache and index?</string>
    <string name="clear_cache_and_index_body">Clear all local cache data and index data?</string>
    <string name="index_update_progress_label">Index update for folder %1$s, %2$d%% synchronized</string>
    <string name="loading_config_starting_syncthing_client">Loading config, starting syncthing client…</string>
    <string name="last_modified_time">Last modified: %1$s</string>
    <string name="remove_device_title">Remove device %1$s\?</string>
    <string name="remove_device_message">Remove %1$s from the list of known devices?</string>
    <string name="device_import_success">Successfully imported device %1$s</string>
    <string name="device_already_known">Device already present %1$s</string>
    <string name="folders_label">Folders</string>
    <string name="devices_label">Devices</string>
    <string name="folder_label_format">%1$s (%2$s)</string>
    <string name="folder_content_info">%1$s, %2$d files, %3$d directories</string>
    <string name="file_info">%1$s, last modified %2$s</string>
    <string name="show_device_id">Show device ID</string>
    <string name="device_id">Device ID</string>
    <string name="device_id_copied">Device ID copied to clipboard</string>
    <string name="share_device_id_chooser">Share device ID with</string>
    <string name="other_syncthing_instance_title">Another Syncthing instance is running</string>
    <string name="other_syncthing_instance_message">Local discovery will not work. Stop the other Syncthing instance to enable local discovery.</string>
    <string name="intro_page_one_title">Welcome to Syncthing Lite</string>
    <string name="intro_page_one_description">Syncthing replaces proprietary sync and cloud services with something open, trustworthy and decentralized. Your data is your data alone and you deserve to choose where it is stored, if it is shared with some third party and how it\'s transmitted over the Internet.</string>
    <string name="intro_page_two_title">Add a device</string>
    <string name="intro_page_three_title">Share your folders</string>
    <string name="intro_page_two_description">Enter a Syncthing device ID, or scan a device ID from a QR code</string>
    <string name="intro_page_three_description">Now accept the device with ID %1$s, and share a folder with it. It may take a few minutes until the devices connect.</string>
    <string name="settings">Settings</string>
    <string name="settings_app_version_title">App version</string>
    <string name="settings_local_device_name">Local device name</string>
    <string name="settings_local_device_summary">The name that other devices will see for this device</string>
    <string name="settings_shutdown_delay_title">Shutdown delay</string>
    <string name="settings_shutdown_delay_summary">Time before shuting down the Syncthing client after its last usage</string>
    <string name="device_id_dialog_title">Enter Device ID</string>
    <string name="settings_shutdown_delay_10_seconds">10 seconds</string>
    <string name="settings_shutdown_delay_30_seconds">30 seconds</string>
    <string name="settings_shutdown_delay_1_minute">1 minute</string>
    <string name="settings_shutdown_delay_5_minutes">5 minutes</string>
    <string name="dialog_warning_reconnect_problem">
        Due to the behaviour of this App and the behaviour of the Syncthing Server,
        you can\'t reconnct for some minutes if the App was killed (due to removing from the recent App list)
        or the connection was interrupted.
        This does not apply to connections over an WiFi, but to connections over the internet.
    </string>
</resources>
