<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/folders"
            android:checked="true"
            android:icon="@drawable/ic_folder_gray_24dp"
            android:title="@string/folders_label" />

        <item
            android:id="@+id/devices"
            android:icon="@drawable/ic_laptop_gray_24dp"
            android:title="@string/devices_label" />

        <item
            android:id="@+id/device_id"
            android:icon="@drawable/ic_qr_code_gray_24dp"
            android:title="@string/show_device_id"
            android:checkable="false" />

        <item
            android:id="@+id/clear_index"
            android:icon="@drawable/ic_delete_gray_24dp"
            android:title="@string/clear_local_cache_index_label"
            android:checkable="false"/>

    </group>

</menu>