<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings">

        <EditTextPreference
            android:key="local_device_name"
            android:title="@string/settings_local_device_name"
            android:summary="@string/settings_local_device_summary"
            android:persistent="false"/>

        <!--

        This is something for the advanced preferences (later), but it still has got an effect

        <ListPreference
            android:key="shutdown_delay"
            android:title="@string/settings_shutdown_delay_title"
            android:summary="@string/settings_shutdown_delay_summary"
            android:entries="@array/shutdown_delay_labels"
            android:entryValues="@array/shutdown_delay_values"
            android:defaultValue="@string/default_shutdown_delay" />

        -->

        <Preference
            android:key="app_version"
            android:title="@string/settings_app_version_title"/>

    </PreferenceCategory>

</PreferenceScreen>
